--- a/client/components/article/topper/_topper-styles.scss
+++ b/client/components/article/topper/_topper-styles.scss
@@ -1,15 +1,34 @@
 @import 'themes';
+.article-topper__slot-2 {
+	width: 100%;
+	height: 60vh;
+	position: relative;
+	background: hotpink;
+}
+
+.article-topper__visual {
+	width: 50%;
+	height: inherit;
+	background: goldenrod;
+	float: right;
+}
 
 .article-topper__text-box {
-	height: 60vh;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: inherit;
 }
 
 .article-topper__text-wrapper {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	justify-content: center;
-	height: 100%;
+
+	width: 80%;
+	height: inherit;
+	margin: 0 auto;
 	-webkit-font-smoothing: antialiased;
 }
 
@@ -44,25 +63,22 @@
 }
 
 .article-topper__headline {
-	align-self: center; // flex-end with bleed?
 	@include setHeadlineFont;
 	width: 75%;
 	@include oGridRespondTo(L) {
 		width: 50%;
 	}
 
-	&:after {
+	&::after {
 		content: '';
 		display: block;
 		width: 33%;
-		border-bottom: 8px solid $textual-color;
-		@debug '#{$textual-color}';
+		// border-bottom: 8px solid $textual-color;
 		margin-top: 20px;
 	}
 }
 
 .article-topper__stand-first {
-	align-self: center; // flex-end with bleed?
 	@include setStandfirstFont;
 	width: 75%;
 	@include oGridRespondTo(L) {
@@ -76,8 +92,11 @@
 		margin-bottom: 5%;
 	}
 
-	> figure > div {
-		padding-bottom: 60vh !important;
+	> figure {
+		width: 50vw !important;
+		> div {
+			padding-bottom: 60vh !important;
+		}
 	}
 
 	.n-content-image {
